--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "concurrently \"nodemon server.js\"\"npm run watch --prefix client\""
   },
+  "proxy": "http://localhost:3000",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jmokate/chat-app.git"
@@ -24,5 +25,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.0.0"
+  },
+  "devDependencies": {
+    "concurrently": "^5.1.0"
   }
 }
