--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^8.0.0"
+    "pg": "^8.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
