db last_active_at updated on login and messages :)

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4"
   }
 }
