--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.27.0",
     "pg": "^8.0.0",
     "socket.io": "^2.3.0"
   },
