--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "chat-app",
-  "version": "1.0.0",
-  "description": "chat app",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon server.js\" \"npm run watch --prefix client\""
-  },
-  "proxy": "http://localhost:3000",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jmokate/chat-app.git"
-  },
-  "keywords": [
-    "chat"
-  ],
-  "author": "John Mokate",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jmokate/chat-app/issues"
-  },
-  "homepage": "https://github.com/jmokate/chat-app#readme",
-  "dependencies": {
-    "bcrypt": "^4.0.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "moment": "^2.27.0",
-    "pg": "^8.0.0",
-    "socket.io": "^2.3.0"
-  },
-  "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
-  }
+	"name": "chat-app",
+	"version": "1.0.0",
+	"description": "chat app",
+	"main": "server.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "concurrently \"nodemon server.js\" \"npm run watch --prefix client\"",
+		"heroku-postbuild": "cd client && npm install && npm run build"
+	},
+	"proxy": "http://localhost:3000",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/jmokate/chat-app.git"
+	},
+	"keywords": [
+		"chat"
+	],
+	"author": "John Mokate",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/jmokate/chat-app/issues"
+	},
+	"homepage": "https://github.com/jmokate/chat-app#readme",
+	"dependencies": {
+		"bcrypt": "^4.0.1",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"moment": "^2.27.0",
+		"pg": "^8.0.0",
+		"socket.io": "^2.3.0"
+	},
+	"devDependencies": {
+		"concurrently": "^5.2.0",
+		"nodemon": "^2.0.4"
+	}
 }
