--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"homepage": "https://github.com/jmokate/chat-app#readme",
 	"dependencies": {
+		"axios": "^0.21.4",
 		"bcrypt": "^5.0.1",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
